Added initiative and message

--- a/index.css
+++ b/index.css
@@ -6,14 +6,14 @@
 :root {
   --color1: #141414;
   --color2: #fff;
-  --color3: #ff5733;
+  --color3: #EC6C37;
   --color4: black;
   --color5: black;
-  /* --text-style1:'Lora', serif;
+  /* --text-style1:'roboto', serif;
     --text-style2: 'Poppins', sans-serif; */
 }
 /* Utilities */
-.container {
+.myContainer {
   padding: 0 5vw;
   background-color: var(--color1);
 }
@@ -22,25 +22,35 @@
   justify-content: center;
   align-items: center;
 }
-.heading {
-  font-family: "Lora", serif;
-  font-style: italic;
-  font-weight: 100;
+.roboto {
+  font-family: 'Roboto Flex', sans-serif;
+  font-weight: 700;
 }
-.paragraph {
+.poppins {
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
+  color: var(--color2);
 }
 .cabin {
   font-family: "Cabin", sans-serif;
   text-transform: uppercase;
+  font-weight: 700;
 }
-.btn {
+.button {
   text-decoration: none;
   color: var(--color1);
   background-color: var(--color2);
   padding: 1.8vh 1.5vw;
   border-radius: 25px;
+}
+.heading {
+  font-size: 2.5rem;
+  text-align: center;
+  font-family: 'Roboto Flex', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  color: var(--color3);
+  margin-bottom: 5vh;
 }
 
 /* Utilities */
@@ -50,7 +60,7 @@ nav {
   position: sticky;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 5;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -65,6 +75,10 @@ nav .logo {
   font-style: normal;
   font-weight: 600;
   color: var(--color2);
+  width: fit-content;
+}
+.logo img{
+  width: 10%;
 }
 .navlink {
   display: flex;
@@ -74,7 +88,8 @@ nav .logo {
   background-color: var(--color2);
   padding: 1.5vh 2vw;
   border-radius: 25px;
-  
+  position: relative;
+  transform: translateX(-14vw);
 }
 .navlink p {
   display: none;
@@ -86,9 +101,6 @@ nav .logo {
 }
 .mobile a {
   color: var(--color2);
-  /* border: 2px solid var(--color2);
-      padding: 10px;
-      border-radius: 100%; */
 }
 .navlink a {
   color: var(--color1);
@@ -99,7 +111,7 @@ nav .logo {
   color: var(--color3);
 }
 
-/* navbar */
+/* navbar End */
 
 /* progressBar */
 .progressBar {
@@ -111,10 +123,10 @@ nav .logo {
   position: sticky;
   top: 12vh;
   left: 0;
-  z-index: 1;
+  z-index: 5;
   max-width: 100%;
 }
-/* progressBar */
+/* progressBar End */
 
 /* Hero Section */
 .hero {
@@ -142,7 +154,88 @@ nav .logo {
 .heroIllustraion {
   width: 40%;
 }
-/* Hero Section */
+/* Hero Section End*/
+
+/* initiative */
+.initiative{
+  width: 50%;
+}
+.Itext{
+  margin:0 10%;
+  line-height: 4vh;
+  font-size: 1.2rem;
+  text-align: center;
+}
+.intiativeImg{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 10vh;
+
+}
+.intiativeImg i{ 
+  font-size: 7rem;
+}
+.intiativeImg p{
+  color: var(--color2);
+}
+  .intiativeImgText{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1vh;
+  }
+/* initiative end */
+
+
+/* message By Founder  */
+
+.message {
+  width: 70vw;
+  height: 60vh;
+  display: flex;
+  justify-content: space-evenly;
+  background-color: var(--color1);
+  margin: 0 2.5vw;
+  border-radius: 25px;
+  border: 5px solid var(--color3);
+}
+.messageContent {
+  width: 60%;
+}
+.messageContent h1 {
+  margin-bottom: 2vh;
+  text-align: left;
+  font-size: 2rem;
+  color: var(--color3);
+}
+.messageContent p {
+  margin-bottom: 2vh;
+  line-height: 3.5vh;
+  text-align: left;
+  font-weight: 400;
+  color: var(--color2);
+}
+.messageContent h5 {
+  text-align: left;
+  color: var(--color2);
+}
+.messageContent h5 span {
+  text-align: left;
+  color: var(--color3);
+}
+.messageImage {
+  width: 20%;
+  display: flex;
+  justify-content: center;
+}
+.messageImage img {
+  width: 100%;
+  border-radius: 100%;
+}
+/* message by founder end */
+
 /* Footer */
 .footer {
   min-height: 70vh;
@@ -195,8 +288,8 @@ footer .footerMid {
   color: var(--color3);
   font-size: 1.2rem;
   margin: 1.5vh 0;
-  font-family: "Lora", serif;
-  font-weight: 100;
+  font-family: 'Roboto Flex', sans-serif;
+  font-weight: 500;
 }
 footer a {
   text-decoration: none;
@@ -242,13 +335,16 @@ footer .LinkContainer a:hover {
   color: var(--color3);
 }
 
-/* Footer */
+/* Footer End*/
 
 /* Responsive */
 @media (max-width: 900px) {
   /* Utilities */
-  .btn {
+  .button {
     padding: 1.8vh 3.5vw;
+  }
+  .heading {
+    font-size: 1.8rem;
   } /* Utilities */
   /* Navbar */
   .navlink p {
@@ -279,12 +375,13 @@ footer .LinkContainer a:hover {
     visibility: hidden;
     transition: 0.7s;
     z-index: 2;
+    transform: translateX(0);
   }
   /* Hamburger */
   nav .navlink.active {
     visibility: visible;
   }
-  /* Navbar */
+  /* Navbar End*/
   /* Hero */
   .hero {
     margin-top: 2.5vh;
@@ -303,10 +400,64 @@ footer .LinkContainer a:hover {
   .heroIllustraion {
     width: 100%;
   }
+  /* Hero End */
+
+
+  .Itext {
+    margin: 0 7%;
+    line-height: 3vh;
+    font-size: 1rem;
+    text-align: center;
+}
+.intiativeImg {
+  margin-top: 6vh;
+}
+.intiativeImg i{ 
+  font-size: 3rem;
+}
+  
+  /* Message By Founder  */
+  .message {
+    width: 100%;
+    height: 82vh;
+    margin: 0vh 0vw;
+    flex-direction: column-reverse;
+  }
+  .messageContainer{
+    padding-top: 10vw;
+    padding-bottom: 15vw;
+  }
+  .messageContent {
+    width: 100%;
+    padding: 2vh 5vw;
+    text-align: center;
+  }
+  .messageImage {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+  }
+  .messageContent h1 {
+    margin-bottom: 2vh;
+    text-align: left;
+    font-size: 1.6rem;
+    color: var(--color3);
+  }
+  .messageContent p {
+    line-height: 2.5vh;
+  }
+  .messageContent h5 {
+    font-size: 1.2rem;
+  }
+
+  /* Message bY Founder End */
   /* footer */
   footer {
     gap: 3vh;
     margin-top: 2.5vh;
+  }
+  .footer a{
+    margin-bottom: 0.2vh;
   }
   .LinkContainer {
     width: 100%;
@@ -320,5 +471,5 @@ footer .LinkContainer a:hover {
   .footerBottom .social {
     gap: 6vw;
   }
-  /* footer */
+  /* footer End*/
 }
