--- a/index.css
+++ b/index.css
@@ -25,6 +25,7 @@
 .roboto {
   font-family: 'Roboto Flex', sans-serif;
   font-weight: 700;
+  font-size: 1.8rem;
 }
 .poppins {
   font-family: "Poppins", sans-serif;
@@ -134,14 +135,14 @@ nav .logo {
   justify-content: space-around;
 }
 .heroContent {
-  width: 45%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 2vh;
 }
 .heroContent h1 {
-  font-size: 3.5rem;
+  font-size: 3rem;
   font-weight: 700;
   color: var(--color3);
 }
@@ -190,11 +191,10 @@ nav .logo {
 
 /* domain starts */
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "poppins", sans-serif;
+.domain-section h1{
+  font-size: 2.5rem;
+  text-align: center;
+  padding: 1rem 0;
 }
 .domain {
   display: flex;
@@ -226,11 +226,11 @@ nav .logo {
 }
 .card:hover img{
     left: 90%;
-    height: 200px;
+    height: 150px;
 }
 .card .content{
     position: relative;
-    width: 70%;
+    width: 60%;
     left: 20%;
     padding:1rem;
     opacity: 0;
@@ -241,7 +241,7 @@ nav .logo {
 .card:hover .content{
     opacity: 1;
     visibility: visible;
-    left: 0%;
+    left: -15%;
 
 }
 .card .content h2{
