--- a/index.css
+++ b/index.css
@@ -37,13 +37,115 @@
   text-transform: uppercase;
   font-weight: 700;
 }
-.button {
-  text-decoration: none;
-  color: var(--color1);
-  background-color: var(--color2);
-  padding: 1.8vh 1.5vw;
-  border-radius: 25px;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&family=Roboto:wght@400;500;700&display=swap");
+
+
+/* .container {
+	width: 1000px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+} */
+.btn {
+	position: relative;
+	top: 0;
+	left: 0;
+	width: 250px;
+	height: 50px;
+	margin: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
+.btn a {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: rgba(255, 255, 255, 0.05);
+	box-shadow: 0 15px 15px rgba(0, 0, 0, 0.3);
+	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+	border-top: 1px solid rgba(255, 255, 255, 0.1);
+	border-radius: 30px;
+	padding: 10px;
+	letter-spacing: 1px;
+	text-decoration: none;
+	overflow: hidden;
+	color: #fff;
+	font-weight: 400px;
+	z-index: 1;
+	transition: 0.5s;
+	backdrop-filter: blur(15px);
+}
+.btn:hover a {
+	letter-spacing: 3px;
+}
+.btn a::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 50%;
+	height: 100%;
+	background: linear-gradient(to left, rgba(255, 255, 255, 0.15), transparent);
+	transform: skewX(45deg) translate(0);
+	transition: 0.5s;
+	filter: blur(0px);
+}
+ .btn:hover a::before {
+	transform: skewX(45deg) translate(200px);
+}
+.btn::before {
+	content: "";
+	position: absolute;
+	left: 50%;
+	transform: translatex(-50%);
+	bottom: -5px;
+	width: 30px;
+	height: 10px;
+	background: #EC6C37;
+	border-radius: 10px;
+	transition: 0.5s;
+	transition-delay: 0.5;
+}
+\ .btn:hover::before /*lightup button*/ {
+	bottom: 0;
+	height: 50%;
+	width: 80%;
+	border-radius: 30px;
+}
+
+.btn::after {
+	content: "";
+	position: absolute;
+	left: 50%;
+	transform: translatex(-50%);
+	top: -5px;
+	width: 30px;
+	height: 10px;
+	background: #EC6C37;
+	border-radius: 10px;
+	transition: 0.5s;
+	transition-delay: 0.5;
+}
+.btn:hover::after /*lightup button*/ {
+	top: 0;
+	height: 50%;
+	width: 80%;
+	border-radius: 30px;
+}
+.btn:nth-child(1)::before, /*chnage 1*/
+.btn:nth-child(1)::after {
+	background: #EC6C37;
+	box-shadow: 0 0 5px #EC6C37, 0 0 15px #EC6C37, 0 0 30px #EC6C37,
+		0 0 60px #EC6C37;
+}
+
+
 .heading {
   font-size: 2.5rem;
   text-align: center;
@@ -213,7 +315,7 @@ nav .logo {
     justify-content: flex-start;
     align-items: center;
     border-radius: 20px;
-    background: linear-gradient(135deg,#d97e0f,#252525);
+    background: linear-gradient(135deg,#bd3f00, #4d018b);
 }
 .card img{
     position: absolute;
@@ -353,7 +455,7 @@ nav .logo {
 /* Footer */
 .footer {
   min-height: 70vh;
-  background-color: var(--color1);
+  background-color:rgb(48, 47, 47);
 }
 footer {
   display: flex;
